--- a/Domain.Main/Domain.Main.csproj
+++ b/Domain.Main/Domain.Main.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Config\Component.cs~RF53569496.TMP" />
+    <None Remove="Employee\Charge.cs~RF534a9f6e.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
   </ItemGroup>
