commit, avance de importacion de lideres

--- a/Application.Dto/Application.Dto.csproj
+++ b/Application.Dto/Application.Dto.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain.Common\Domain.Common.csproj" />
+  </ItemGroup>
+
 </Project>
