commit, se avanzo evaluaciones

--- a/Application.Main/Application.Main.csproj
+++ b/Application.Main/Application.Main.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\shared-kernell-net6\SharedKernell\SharedKernell.csproj" />
+    <ProjectReference Include="..\..\shared-kernell-net6\SharedKernell\SharedKernell.csproj" />
     <ProjectReference Include="..\Application.Dto\Application.Dto.csproj" />
     <ProjectReference Include="..\Infrastructure.UnitOfWork\Infrastructure.UnitOfWork.csproj" />
   </ItemGroup>
