se corrigieron datos formula y mensajes de error

--- a/Api.Services/appsettings.json
+++ b/Api.Services/appsettings.json
@@ -43,7 +43,7 @@
   "MailConfiguration": {
     "Address": {
       "Mail": "martel.royss21@gmail.com",
-      "ShowName": "Sistema ChloeAtelier"
+      "ShowName": "Sistema Evaluluaciones"
     },
     "UserName": "martel.royss21@gmail.com",
     "Password": "eekdhvdcejrjwyjp",
